# amazon-backend

./: Dockerfile  analytics.py  calculations.md  main.py  pyproject.toml  requirements.txt  structure.txt  testing.ipynb
aeo_geo_dashboard_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/core/: config.py  logger.py
app/models/: schemas.py
app/routes/: __init__.py  analytics.py  compare.py  explore.py  health.py  home.py  prompt_detail.py
app/services/: analysis.py  analytics.py  calculations.py  data_loader.py  filters.py  metrics.py  prod_source_scores_normalized.xlsx
app/utils/: helpers.py
data/: sheet.xlsx
