[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeo-geo-dashboard-api"
version = "1.0.0"
description = "FastAPI backend for AEO/GEO Analytics Dashboard"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "pandas==2.1.3",
    "numpy>=1.26.0",
    "openpyxl==3.1.2",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.1",
    "black==23.11.0",
    "ruff==0.1.6",
]

[tool.setuptools]
packages = ["app"]
py-modules = []

[tool.setuptools.package-data]
app = ["**/*.py"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
